--- a/groupa_project2.ipynb
+++ b/groupa_project2.ipynb
@@ -3,9 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "groupb_project2.ipynb",
+      "name": "groupa_project2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPpwQbus74xBPbGG3i8DS8U",
+      "authorship_tag": "ABX9TyMiW0ad5ekLNUUjwDz7AAlu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -21,7 +21,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/bieri2/ATMS597-Project2-GroupA/blob/master/groupb_project2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/bieri2/ATMS597-Project2-GroupA/blob/master/groupa_project2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -35,8 +35,11 @@
         "import numpy as np\n",
         "import requests\n",
         "import pandas as pd\n",
+        "import calendar\n",
+        "import datetime\n",
         "import matplotlib.pyplot as plt\n",
-        "import datetime"
+        "from matplotlib.pyplot import cm\n",
+        "import matplotlib as mpl"
       ],
       "execution_count": 0,
       "outputs": []
@@ -52,14 +55,14 @@
         "# Define function to download data from NCEI\n",
         "# Function adapted from Stefanie Moline: https://github.com/stefmolin/Hands-On-Data-Analysis-with-Pandas/\n",
         "\n",
-        "def make_request(endpoint, payload=None):\n",
+        "def make_request(endpoint, token, payload=None):\n",
         "    \"\"\"\n",
-        "    Make a request to a specific endpoint on the weather API\n",
+        "    Make a request to a specific endpoint on the NCDC Web API\n",
         "    passing headers and optional payload.\n",
         "    \n",
         "    Parameters:\n",
         "        - endpoint: The endpoint of the API you want to \n",
-        "                    make a GET request to.\n",
+        "                    make a GET request to (string).\n",
         "        - payload: A dictionary of data to pass along \n",
         "                   with the request.\n",
         "    \n",
@@ -69,10 +72,39 @@
         "    return requests.get(\n",
         "        f'https://www.ncdc.noaa.gov/cdo-web/api/v2/{endpoint}',\n",
         "        headers={\n",
-        "            'token': 'fqMFYJqPpWnQIARJzXBQhWPbYEtJwpoH'\n",
+        "            'token': token \n",
         "        },\n",
         "        params=payload\n",
         "    )"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1eBo2Z5U51pQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def add_a_month(date):\n",
+        "    \"\"\"\n",
+        "    A Python function that takes in a datetime object and returns\n",
+        "    the next month.\n",
+        "    \n",
+        "    Parameters:\n",
+        "        - date : Input Datetime object.\n",
+        "    \n",
+        "    Returns:\n",
+        "        Output Datetime object, with next month added.\n",
+        "    \"\"\"    \n",
+        "    \n",
+        "    month = date.month - 1 + 1\n",
+        "    year = date.year + month // 12\n",
+        "    month = month % 12 + 1\n",
+        "    day = min(date.day, calendar.monthrange(year,month)[1])\n",
+        "    return datetime.date(year, month, day)"
       ],
       "execution_count": 0,
       "outputs": []
@@ -85,31 +117,51 @@
         "colab": {}
       },
       "source": [
-        "current = datetime.date(2017,12, 1)\n",
-        "end = datetime.date(2017, 12, 3)\n",
+        "def stripes_inputs(stationid, token, start, end, tunit):\n",
+        "    \"\"\"\n",
+        "    A Python function that takes in a station ID, start Datetime,\n",
+        "    end Datetime, time unit and downloads the necessary data from\n",
+        "    the Global Historical Climatology Network.\n",
+        "    \n",
+        "    Parameters:\n",
+        "        - stationid : Station ID (string).\n",
+        "        - start : Start Datetime (Datetime object).\n",
+        "        - end : End Datetime (Datetime object).\n",
+        "        - tunit : time unit (string), may be either 'y' for year, 'm' for \n",
+        "         month, 'w' for week or 'd' for day.\n",
+        "    \n",
+        "    Returns:\n",
+        "        GHCN dataset as specified that can then be read as a dataframe.\n",
+        "    \"\"\" \n",
+        "    \n",
+        "    results = []\n",
+        "    while start < end :\n",
+        "          response = make_request(\n",
+        "              'data', token, \n",
+        "              {\n",
+        "                  'datasetid' : 'GHCND', # Global Historical Climatology Network - Daily (GHCND) dataset\n",
+        "                  'stationid' : f'GHCND:{siteid}', \n",
+        "                  'startdate' : start,\n",
+        "                  'enddate'   : end,\n",
+        "                  'datatypeid': 'TMAX',\n",
+        "                  'units'     : 'metric'\n",
+        "              }\n",
+        "          )\n",
         "\n",
-        "results = []\n",
+        "          if response.ok:\n",
+        "              # we extend the list instead of appending to avoid getting a nested list\n",
+        "              results.extend(response.json()['results'][0])\n",
         "\n",
-        "while current < end:\n",
-        "\n",
-        "    response = make_request(\n",
-        "        'data', \n",
-        "        {\n",
-        "            'datasetid' : 'GHCND', # Global Historical Climatology Network - Daily (GHCND) dataset\n",
-        "            'stationid' : 'GHCND:ASN00008051', # Somewhere in Australia \n",
-        "            'datatypeid': 'TMAX', # Request only TMAX\n",
-        "            'startdate' : current,\n",
-        "            'enddate' : current,\n",
-        "            'units' : 'metric'\n",
-        "        }\n",
-        "    )\n",
-        "\n",
-        "    if response.ok:\n",
-        "        # we extend the list instead of appending to avoid getting a nested list\n",
-        "        results.extend(response.json()['results'][0])\n",
-        "\n",
-        "    # update the current date to avoid an infinite loop\n",
-        "    current += datetime.timedelta(days=1)"
+        "          # update the current date to avoid an infinite loop at a given time interval\n",
+        "          if (tunit=='y'):\n",
+        "               start += datetime.timedelta(days=365)\n",
+        "          elif (tunit=='m'):\n",
+        "               start += add_a_month(start)\n",
+        "          elif (tunit=='w'):\n",
+        "               start += datetime.timedelta(weeks=tdelta)\n",
+        "          else:\n",
+        "               start += datetime.timedelta(days=1)\n",
+        "    return results"
       ],
       "execution_count": 0,
       "outputs": []
@@ -117,51 +169,95 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MexGKadLzpxb",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 191
-        },
-        "outputId": "2f6072dc-4e26-4d18-8d72-79c254149842"
-      },
-      "source": [
-        "results"
-      ],
-      "execution_count": 60,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[{'attributes': ',,S,',\n",
-              "  'datatype': 'TMAX',\n",
-              "  'date': '2017-12-01T00:00:00',\n",
-              "  'station': 'GHCND:ASN00008051',\n",
-              "  'value': 34.0},\n",
-              " {'attributes': ',,S,',\n",
-              "  'datatype': 'TMAX',\n",
-              "  'date': '2017-12-02T00:00:00',\n",
-              "  'station': 'GHCND:ASN00008051',\n",
-              "  'value': 41.0}]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 60
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "99qXXUJK145R",
+        "id": "n3f2AXlxDBEg",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "## Method to plot Climate (Warming) Stripes and/or Time Series (if asked) :\n",
+        "def plot_stripes(Tmax, Tmin, t, station_name, plot_tseries):\n",
+        "    \"\"\"\n",
+        "    A Python function that takes in max/min data for a given station and \n",
+        "    plots Climate Stripes and/or Time-Series, if user asks for one.\n",
+        "    \n",
+        "    Parameters:\n",
+        "        - Tmax : Array/List of Maximum Temperature Values.\n",
+        "        - Tmin : Array/List of Minimum Temperature Values.\n",
+        "        - t : Array/List of years in the record (might have multiple\n",
+        "          same values if there are monthly/weekly sub-data).\n",
+        "        - station_name : String name of the Station.\n",
+        "        - plot_tseries : Character variable with user choice for either\n",
+        "        plotting or not plotting Time-series line. Either 'y' or 'n'.\n",
+        "    \n",
+        "    Returns:\n",
+        "        Output Image as either a Climate Stripes with/without a time series.\n",
+        "    \"\"\"  \n",
+        "\n",
+        "    ## call figure and define plot titles\n",
+        "    fig = plt.figure(figsize=(8,6))\n",
+        "    plt.title(station_name, fontsize=14)\n",
+        "    ax = plt.gca()\n",
+        "\n",
+        "    ## Calculate temporal intervals and temperature anomalies :\n",
+        "    num_t = len(np.unique(t))\n",
+        "    start = t[0]\n",
+        "    AvT = (Tmax+Tmin)/2\n",
+        "    Tav = []\n",
+        "    for i in np.arange(0,num_t):\n",
+        "        Tav.append(np.average(AvT[np.where(t==start+i)]))\n",
+        "    \n",
+        "    ## calculate anomalies\n",
+        "    MeanT = np.nanmean(Tav)\n",
+        "    Tanoms = Tav-MeanT\n",
+        "\n",
+        "    ## Store the anomalies as a 2D matrix for the stripes: \n",
+        "    heatmap = np.zeros((len(Tav),len(Tav)))\n",
+        "    for i in range(0,num_t):\n",
+        "        heatmap[:,i] = Tanoms[i]  \n",
+        "\n",
+        "    ## calculate fraction of maximum T for the time-series :\n",
+        "    X = np.arange(num_t)\n",
+        "    points = Tav/np.nanmax(AvT)*len(Tav)\n",
+        "\n",
+        "    ## Plot stripes and time-series if necessary :   \n",
+        "    plt.imshow(heatmap[:,:], origin = 'lower', cmap = 'seismic', vmin = np.nanmin(Tanoms), vmax = np.nanmax(Tanoms))\n",
+        "    if (plot_tseries == 'y'):\n",
+        "        plt.plot(X, points, marker = 'o', color='yellow') \n",
+        "    plt.axis('off') # Suppress the axes\n",
+        " \n",
+        "    # plt.savefig(station_name+'_ClimateStripes_'+str(start)+'_'+str(end)+'.png', bbox_inches='tight',dpi=400)\n",
+        "    plt.show()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oPslNcxvD6PQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "if __name__ == '__main__':\n",
+        "    ## Read Example Data\n",
+        "    #station_name='Austin'\n",
+        "    #t = np.loadtxt('ClimateStripesData.txt', skiprows=2, usecols=[0])\n",
+        "    #Tmax = np.loadtxt('ClimateStripesData.txt', skiprows=2, usecols=[2])\n",
+        "    #Tmin = np.loadtxt('ClimateStripesData.txt', skiprows=2, usecols=[3])\n",
+        "\n",
+        "    starttime = datetime.date(2018, 1, 1)\n",
+        "    endtime   = datetime.date(2018, 1, 10)\n",
+        "    data = stripes_inputs('GHCND:ASN00008051', 'fqMFYJqPpWnQIARJzXBQhWPbYEtJwpoH', \n",
+        "                          starttime, endtime, 'd')\n",
+        "\n",
+        "    ## Create data-frame:\n",
+        "    df = pd.DataFrame(data)\n",
+        "    df.head()\n",
+        "\n",
+        "    ### Need to add/edit code here - data reduction with pandas\n",
+        "\n",
+        "    plot_stripes(Tmax = Tmax, Tmin = Tmin, t = t, station_name = station_name, plot_tseries = 'y')"
       ],
       "execution_count": 0,
       "outputs": []
