Fixed some things and added code to average values before plotting - this needs to be added to function

--- a/groupa_project2.ipynb
+++ b/groupa_project2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "groupa_project2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMiW0ad5ekLNUUjwDz7AAlu",
+      "authorship_tag": "ABX9TyO3tgm8dJAhh48bOTcekOWT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -117,14 +117,14 @@
         "colab": {}
       },
       "source": [
-        "def stripes_inputs(stationid, token, start, end, tunit):\n",
+        "def stripes_inputs(siteid, token, start, end, tunit):\n",
         "    \"\"\"\n",
         "    A Python function that takes in a station ID, start Datetime,\n",
         "    end Datetime, time unit and downloads the necessary data from\n",
         "    the Global Historical Climatology Network.\n",
         "    \n",
         "    Parameters:\n",
-        "        - stationid : Station ID (string).\n",
+        "        - siteid : Site ID (string).\n",
         "        - start : Start Datetime (Datetime object).\n",
         "        - end : End Datetime (Datetime object).\n",
         "        - tunit : time unit (string), may be either 'y' for year, 'm' for \n",
@@ -140,17 +140,17 @@
         "              'data', token, \n",
         "              {\n",
         "                  'datasetid' : 'GHCND', # Global Historical Climatology Network - Daily (GHCND) dataset\n",
-        "                  'stationid' : f'GHCND:{siteid}', \n",
+        "                  'stationid' : f'{siteid}', \n",
         "                  'startdate' : start,\n",
-        "                  'enddate'   : end,\n",
-        "                  'datatypeid': 'TMAX',\n",
+        "                  'enddate'   : start,\n",
+        "                  'datatypeid': ['TMAX','TMIN'],\n",
         "                  'units'     : 'metric'\n",
         "              }\n",
         "          )\n",
         "\n",
         "          if response.ok:\n",
-        "              # we extend the list instead of appending to avoid getting a nested list\n",
-        "              results.extend(response.json()['results'][0])\n",
+        "               # we extend the list instead of appending to avoid getting a nested list\n",
+        "               results.extend(response.json()['results'])\n",
         "\n",
         "          # update the current date to avoid an infinite loop at a given time interval\n",
         "          if (tunit=='y'):\n",
@@ -246,18 +246,33 @@
         "    #Tmax = np.loadtxt('ClimateStripesData.txt', skiprows=2, usecols=[2])\n",
         "    #Tmin = np.loadtxt('ClimateStripesData.txt', skiprows=2, usecols=[3])\n",
         "\n",
-        "    starttime = datetime.date(2018, 1, 1)\n",
-        "    endtime   = datetime.date(2018, 1, 10)\n",
-        "    data = stripes_inputs('GHCND:ASN00008051', 'fqMFYJqPpWnQIARJzXBQhWPbYEtJwpoH', \n",
+        "    starttime = datetime.date(2010, 1, 1)\n",
+        "    endtime   = datetime.date(2010, 1, 5)\n",
+        "    data = stripes_inputs('GHCND:USC00281335', 'fqMFYJqPpWnQIARJzXBQhWPbYEtJwpoH', \n",
         "                          starttime, endtime, 'd')\n",
         "\n",
         "    ## Create data-frame:\n",
-        "    df = pd.DataFrame(data)\n",
-        "    df.head()\n",
+        "    df = pd.DataFrame(data[0::2])\n",
+        "    df = df.rename(columns={'value':'TMAX'})\n",
+        "    df['TMIN'] = [data[1::2][x]['value'] for x in range(0,len(data[1::2]))]\n",
+        "    df = df.set_index(pd.to_datetime(df['date'])).drop(columns='date')\n",
+        "    df_avg = df.resample('MS').mean()\n",
         "\n",
-        "    ### Need to add/edit code here - data reduction with pandas\n",
-        "\n",
-        "    plot_stripes(Tmax = Tmax, Tmin = Tmin, t = t, station_name = station_name, plot_tseries = 'y')"
+        "    #plot_stripes(Tmax = df['TMAX'].values, Tmin = df['TMIN'].values, \n",
+        "    #             t = df.index.year.values, station_name = 'New York', plot_tseries = 'y')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SaL9FWJDbMq6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
