--- a/groupa_project2.ipynb
+++ b/groupa_project2.ipynb
@@ -244,7 +244,7 @@
         "            plt.xticks(X[::100], t[::100].strftime(\"%Y\"))\n",
         "        else:\n",
         "            plt.xticks(X[::200], t[::200].strftime(\"%Y\"))\n",
-        "        plt.colorbar(shrink=0.3)\n",
+        "        plt.colorbar(shrink = 0.3, label = 'Std. dev.')\n",
         "    else:\n",
         "        plt.axis('off') # Default is to suppress the axes\n",
         " \n",
@@ -252,7 +252,7 @@
         "\n",
         "    if save_plot:\n",
         "        ## Save figure as .png\n",
-        "        plt.savefig(station_name+'_ClimateStripes_' + str(start)+ '_' + \n",
+        "        plt.savefig(station_name + '_ClimateStripes_' + str(start) + '_' + \n",
         "                    str(end) + '.png', bbox_inches = 'tight', dpi = 400)"
       ],
       "execution_count": 0,
